--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -7,7 +7,7 @@
         {{ if .Params.categories }}
           {{ range $index, $category := .Params.categories }}
             {{ if gt $index 0 }}, {{ end }}
-            <a class="clean" href="{{ "categories/" | relURL }}{{ . | urlize }}">{{ upper . }}</a>,
+            <a class="no-shadow" href="{{ "categories/" | relURL }}{{ . | urlize }}">{{ upper . }}</a>,
           {{ end }}
         {{ end }}
         {{ .WordCount }} words,
@@ -19,7 +19,7 @@
     </section>
     <footer>
       {{ if .Params.tags }}
-        <div class="tags">
+        <div>
           {{ range $index, $tag := .Params.tags }}
             {{ if gt $index 0 }}, {{ end }}
             <a href="{{ "tags/" | relURL }}{{ . | urlize }}">
