--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -1,11 +1,15 @@
+// General
 $base-font-size: 21px;
 $base-line-height: 1.6;
+$page-max-width: 65rem;
 
 $font-size-h1: $base-font-size * 2;
 
-$color-white: #fff;
-$color-white-smoke: #f2f3f5;
-// $color-blue: #5eaaed;
-$color-blue: #3eb0ef;
-$color-gray: #ccc;
+// Colors
 $color-black: #000;
+$color-coral: #ec8732;
+$color-dark-slate-gray: #202020;
+$color-dodger-blue: #1e90ff;
+$color-light-gray: #d0d0d0;
+$color-silver: #c0c0c0;
+$color-white: #fff;
