--- a/src/styles/_components/content.scss
+++ b/src/styles/_components/content.scss
@@ -1,12 +1,7 @@
 main {
   margin: 0 auto;
-  // justify-self: center;
-  // width: 100%;
-  max-width: 65rem;
+  max-width: $page-max-width;
   width: 100%;
-  // margin: 0 auto;
-  // height: 80%;
-  // padding: 1rem 2rem;
 
   &.homepage {
     align-self: center;
