--- a/src/styles/_components/homepage.scss
+++ b/src/styles/_components/homepage.scss
@@ -9,14 +9,8 @@
   }
 
   .social-icons {
-    border-top: 1px solid #ccc;
+    border-top: 1px solid $color-silver;
     padding-top: 1rem;
     text-align: right;
-
-    // svg {
-    //   height: 1.5rem;
-    //   padding: 0 0.3rem;
-    //   width: 1.5rem;
-    // }
   }
 }
