--- a/src/styles/_components/links.scss
+++ b/src/styles/_components/links.scss
@@ -1,15 +1,15 @@
 a {
-  box-shadow: inset 0 -2px 0 $color-blue;
+  box-shadow: inset 0 -2px 0 $color-dodger-blue;
   color: $color-black;
   text-decoration: none;
 
   &:hover, &:active {
     box-shadow: none;
-    color: $color-blue;
+    color: $color-dodger-blue;
     text-decoration: none;
   }
 
-  &.clean {
+  &.no-shadow {
     box-shadow: none;
   }
 }
