--- a/layouts/partials/pagination.html
+++ b/layouts/partials/pagination.html
@@ -1,14 +1,14 @@
 <ul class="pagination">
   <li>
     {{ if .Paginator.HasPrev }}
-      <a href="{{ .Paginator.Prev.URL }}">
+      <a href="{{ .Paginator.Prev.URL | relURL }}">
         previous
       </a>
     {{ end }}
   </li>
   <li>
     {{ if .Paginator.HasNext }}
-      <a href="{{ .Paginator.Next.URL }}">
+      <a href="{{ .Paginator.Next.URL | relURL }}">
         next
       </a>
     {{ end }}
