--- a/layouts/_default/taxonomy.html
+++ b/layouts/_default/taxonomy.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
   <div class="taxonomies-list">
     <h1>
-      Posts about {{ .Title }}
+      {{ i18n "postsAbout" }} {{ .Title }}
       <a class="no-shadow" href="{{ .RSSLink }}" title="RSS">
         <svg class="rss" aria-labelledby="simpleicons-rss-icon" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
           <title id="simpleicons-rss-icon">RSS icon</title>
