--- a/layouts/partials/pagination.html
+++ b/layouts/partials/pagination.html
@@ -2,14 +2,14 @@
   <li>
     {{ if .Paginator.HasPrev }}
       <a href="{{ .Paginator.Prev.URL | relURL }}">
-        previous
+        {{ i18n "previous" }}
       </a>
     {{ end }}
   </li>
   <li>
     {{ if .Paginator.HasNext }}
       <a href="{{ .Paginator.Next.URL | relURL }}">
-        next
+        {{ i18n "next" }}
       </a>
     {{ end }}
   </li>
