--- a/layouts/shortcodes/img.html
+++ b/layouts/shortcodes/img.html
@@ -1,6 +1,6 @@
 <figure>
-  <a href="{{ .Get "src" }}" title="{{ .Get "title" }}">
-    <img src="{{ .Get "src" }}" alt="{{ .Get "title" }}">
+  <a href="{{ .Get "src" | relURL }}" title="{{ .Get "title" }}">
+    <img src="{{ .Get "src" | relURL }}" alt="{{ .Get "title" }}">
   </a>
   <figcaption>{{ .Get "title" }}</figcaption>
 </figure>
