--- a/src/styles/_components/footer.scss
+++ b/src/styles/_components/footer.scss
@@ -1,7 +1,8 @@
 footer.global {
   align-items: center;
   display: flex;
-  height: 50px;
+  flex: 0 0 auto;
+  height: 3rem;
   justify-content: flex-end;
   padding: 0 1.5rem;
 }
