--- a/src/styles/_components/homepage.scss
+++ b/src/styles/_components/homepage.scss
@@ -1,11 +1,7 @@
 .homepage {
-  h1 {
-    line-height: $font-size-h1 * $base-line-height;
-  }
-
   .avatar {
     border-radius: 50%;
-    margin: 0 auto;
+    margin-bottom: 2rem;
   }
 
   .social-icons {
