--- a/src/styles/_components/navbar.scss
+++ b/src/styles/_components/navbar.scss
@@ -1,8 +1,8 @@
 nav {
   align-items: center;
-  align-self: center;
   display: flex;
-  height: 50px;
+  flex: 0 0 auto;
+  height: 3rem;
   justify-content: space-between;
   padding: 0 1.5rem;
   text-align: right;
