--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,6 +2,8 @@
 
 @import "settings";
 
+@import "mixins";
+
 @import "_components/base";
 @import "_components/content";
 @import "_components/footer";
