--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -1,6 +1,8 @@
 <nav>
   <div>
-    <a class="no-shadow" href="{{ $.LanguagePrefix }}{{ "/" | relURL }}" title="{{ i18n "homePage" }}">~/{{ .Site.Params.nick }}</a>
+    <a class="no-shadow" href="{{ $.LanguagePrefix }}{{ "/" | relURL }}" title="{{ i18n "homePage" }}">
+      {{ .Site.Author.homepagetext }}
+    </a>
   </div>
   <div>
     <a class="no-shadow" href="{{ $.LanguagePrefix }}{{ "posts" | relURL }}" title="{{ i18n "postsList" }}">
@@ -10,7 +12,7 @@
       </svg>
     </a>
     {{ if and (.RSSLink) (not .IsHome) }}
-      <a class="no-shadow" href="{{ .RSSLink }}">
+      <a class="no-shadow" href="{{ .RSSLink }}" title="RSS">
         <svg class="rss" aria-labelledby="simpleicons-rss-icon" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
           <title id="simpleicons-rss-icon">RSS icon</title>
           <path d="M19.199 24C19.199 13.467 10.533 4.8 0 4.8V0c13.165 0 24 10.835 24 24h-4.801zM3.291 17.415c1.814 0 3.293 1.479 3.293 3.295 0 1.813-1.485 3.29-3.301 3.29C1.47 24 0 22.526 0 20.71s1.475-3.294 3.291-3.295zM15.909 24h-4.665c0-6.169-5.075-11.245-11.244-11.245V8.09c8.727 0 15.909 7.184 15.909 15.91z"/>
