--- a/src/styles/_components/typography.scss
+++ b/src/styles/_components/typography.scss
@@ -1,38 +1,38 @@
 h1 {
-  font-size: 3rem;
-  margin-bottom: 1.5rem;
-  margin-top: 0;
+  font-size: 2rem;
+  margin-bottom: 1rem;
+  margin-top: 1.5rem;
 }
 
 h2 {
-  font-size: 2.5rem;
-  margin-bottom: 1.5rem;
-  margin-top: 0;
+  font-size: 1.5rem;
+  margin-bottom: 0.9rem;
+  margin-top: 1.4rem;
 }
 
 h3 {
-  font-size: 2rem;
-  margin-bottom: 1.5rem;
-  margin-top: 0;
+  font-size: 1.17rem;
+  margin-bottom: 0.8rem;
+  margin-top: 1.3rem;
 }
 
 
 h4 {
-  font-size: 1.5rem;
-  margin-bottom: 1.5rem;
-  margin-top: 0;
+  font-size: 1rem;
+  margin-bottom: 0.7rem;
+  margin-top: 1.2rem;
 }
 
 h5 {
-  font-size: 1.25rem;
-  margin-bottom: 1.5rem;
-  margin-top: 0;
+  font-size: 0.83rem;
+  margin-bottom: 0.6rem;
+  margin-top: 1.3rem;
 }
 
 h6 {
-  font-size: 1rem;
-  margin-bottom: 1.5rem;
-  margin-top: 0;
+  font-size: 0.75rem;
+  margin-bottom: 0.5rem;
+  margin-top: 1.2rem;
 }
 
 p {
