--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -3,31 +3,31 @@
     <header>
       <p>
         <time datetime="{{ .Date.Format "2006-01-02 03:04" }}">
-          {{ .Date.Format "January 2, 2006" }},
+          {{- .Date.Format "January 2, 2006" -}},
         </time>
         {{ if .Params.categories }}
           {{ range $index, $category := .Params.categories }}
             {{ if gt $index 0 }}, {{ end }}
-            <a href="{{ $.LanguagePrefix }}{{ "/categories/" | relURL }}{{ . | urlize }}">{{ upper . }}</a>
+            <a href="{{ $.LanguagePrefix }}{{ "/categories/" | relURL }}{{ . | urlize }}">{{- upper . -}}</a>
           {{ end }}
         {{ end }}
       </p>
       <h1>
-        {{ .Title }}
+        {{- .Title -}}
       </h1>
       <p>
         {{ if .Params.tags }}
           {{ range $index, $tag := .Params.tags }}
             {{ if gt $index 0 }}, {{ end }}
             <a href="{{ $.LanguagePrefix }}{{ "tags/" | relURL }}{{ . | urlize }}">
-              <span class="hash">#</span>{{ . }}
+              <span class="hash">#</span>{{- . -}}
             </a>
           {{ end }}
         {{ end }}
       </p>
     </header>
     <section>
-      {{ .Content }}
+      {{- .Content -}}
     </section>
     <footer>
       {{ template "_internal/disqus.html" . }}
