--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,12 +1,12 @@
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
-<title> {{ .Title }} &middot; {{ .Site.Title }} </title>
+<title>{{- .Title -}} &middot; {{- .Site.Title -}}</title>
 
 {{ .Hugo.Generator }}
 
 <!-- CSS -->
 <link href="https://fonts.googleapis.com/css?family=Ubuntu:300" rel="stylesheet">
-<link rel='stylesheet' href='{{ print "/assets/css/" $.Site.Data.assets.main.css | relURL }}'>
+<link rel="stylesheet" href='{{ print "/assets/css/" $.Site.Data.assets.main.css | relURL }}'>
 
 <!-- Icons -->
 <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/apple-touch-icon-144-precomposed.png">
