Add css class to vimeo iframe

--- a/layouts/shortcodes/vimeo.html
+++ b/layouts/shortcodes/vimeo.html
@@ -1,4 +1,5 @@
 <iframe
+    class="vimeo"
     src="https://player.vimeo.com/video/{{ .Get 0 }}?byline=0&portrait=0"
     width="640"
     height="267"
