--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,6 +1,6 @@
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
-<title>{{- .Title -}} &middot; {{- .Site.Title -}}</title>
+<title>{{- .Title }} - {{ .Site.Title -}}</title>
 
 {{ .Hugo.Generator }}
 
@@ -13,8 +13,8 @@
 <link rel="shortcut icon" href="/favicon.ico">
 
 {{ if .RSSLink }}
-  <link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
-  <link href="{{ .RSSLink }}" rel="feed" type="application/rss+xml" title="{{ .Site.Title }}" />
+  <link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{- .Site.Title -}}" />
+  <link href="{{ .RSSLink }}" rel="feed" type="application/rss+xml" title="{{- .Site.Title -}}" />
 {{ end }}
 
 {{ template "_internal/opengraph.html" . }}
