--- a/src/styles/_components/typography.scss
+++ b/src/styles/_components/typography.scss
@@ -207,3 +207,22 @@ ul {
     }
   }
 }
+
+.videowrapper {
+  clear: both;
+  float: none;
+  height: 0;
+  margin-bottom: 5rem;
+  padding-bottom: 56.25%;
+  padding-top: 25px;
+  position: relative;
+  width: 100%;
+
+  iframe {
+    height: 100%;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
+  }
+}
