--- a/layouts/shortcodes/vimeo.html
+++ b/layouts/shortcodes/vimeo.html
@@ -1,4 +1,5 @@
-<iframe
+<div class="videowrapper">
+  <iframe
     class="vimeo"
     src="https://player.vimeo.com/video/{{ .Get 0 }}?byline=0&portrait=0"
     width="640"
@@ -7,4 +8,6 @@
     webkitallowfullscreen
     mozallowfullscreen
     allowfullscreen
-></iframe>
+  >
+  </iframe>
+</div>
