--- a/layouts/shortcodes/youtube.html
+++ b/layouts/shortcodes/youtube.html
@@ -1,1 +1,11 @@
-<iframe class="youtube" width="560" height="315" src="https://www.youtube.com/embed/{{ .Get 0 }}" frameborder="0" allowfullscreen></iframe>
+<div class="videowrapper">
+  <iframe
+    class="youtube"
+    width="560"
+    height="315"
+    src="https://www.youtube.com/embed/{{ .Get 0 }}"
+    frameborder="0"
+    allowfullscreen
+  >
+  </iframe>
+</div>
