--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,5 +1,5 @@
-{{ if not .IsHome }}
-  <footer class="global">
-    {{ partial "social_icons.html" . }}
-  </footer>
-{{ end }}
+<footer>
+  <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">
+    <img alt="Creative Commons License" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png">
+  </a>
+</footer>
