--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,11 +1,11 @@
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>{{- .Title }} - {{ .Site.Title -}}</title>
 
 {{ .Hugo.Generator }}
 
 <!-- CSS -->
-<link href="https://fonts.googleapis.com/css?family=Ubuntu:300" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
 <link rel="stylesheet" href='{{ print "/assets/css/" $.Site.Data.assets.main.css | relURL }}'>
 
 <!-- Icons -->
