--- a/src/styles/_components/links.scss
+++ b/src/styles/_components/links.scss
@@ -1,15 +1,8 @@
 a {
-  box-shadow: none;
   color: $color-dodger-blue;
   text-decoration: none;
 
-  &:hover, &:active {    
-    box-shadow: inset 0 -2px 0 $color-dodger-blue;
-    color: $color-black;  
-    text-decoration: none;
-  }
-
-  &.no-shadow {
-    box-shadow: none;
+  &:hover, &:active, &:visited {    
+    text-decoration: underline;
   }
 }
