--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -10,10 +10,10 @@
 @import "_components/homepage";
 @import "_components/links";
 @import "_components/navbar";
+@import "_components/page";
 @import "_components/pagination";
 @import "_components/post";
 @import "_components/posts_list";
-@import "_components/social_icons";
 @import "_components/taxonomies";
 @import "_components/taxonomies_list";
 @import "_components/typography";
