--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -1,8 +1,24 @@
 <nav>
   <div class="title">
     <a href="{{ $.LanguagePrefix }}{{ "/" | relURL }}" title="{{ i18n "homePage" }}">
-      {{ .Site.Author.homepagetext }}
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        width="24"
+        height="24"
+        viewBox="0 0 24 24"
+        fill="none"
+        stroke="currentColor"
+        stroke-width="2"
+        stroke-linecap="round"
+        stroke-linejoin="round"
+      >
+        <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z" />
+        <polyline points="9 22 9 12 15 12 15 22" />
+      </svg>
     </a>
+    <span>
+      {{ .Site.Author.homepagetext }}
+    </span>
   </div>
   <div class="nav">
     <a href="{{ .RSSLink }}" title="RSS">
