Remove the underline from navbar icons.

--- a/src/styles/_components/navbar.scss
+++ b/src/styles/_components/navbar.scss
@@ -5,16 +5,22 @@ nav {
   .title {
     grid-column: 1;
 
-    svg {
-      color: $color-black;
-      height: auto;
-      margin-right: 0.5rem;
-      width: $navbarHeight/2;
-      vertical-align: middle;
-    }
+    a {
+      &:hover, &:active, &:visited {
+        text-decoration: none;
+      }
 
-    span {
-      vertical-align: middle;
+      svg {
+        color: $color-black;
+        height: auto;
+        margin-right: 0.5rem;
+        width: $navbarHeight/2;
+        vertical-align: middle;
+      }
+
+      span {
+        vertical-align: middle;
+      }
     }
   }
 
@@ -23,6 +29,10 @@ nav {
     justify-self: end;
 
     a {
+      &:hover, &:active, &:visited {
+        text-decoration: none;
+      }
+
       svg {
         color: $color-rss;
         height: auto;
