--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -3,9 +3,9 @@ $base-font-size: 20px;
 $base-line-height: 1.5;
 $page-max-width: 60rem;
 $padding-left-right: 1rem;
-$navbarHeight: 3rem;
-$footerHeigth: 3rem;
-$itemMargin: 3rem;
+$navbarHeight: 2rem;
+$footerHeight: 2rem;
+$itemMargin: 2rem;
 
 // Colors
 $color-black: #000;
