--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -12,10 +12,9 @@
 <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/apple-touch-icon-144-precomposed.png">
 <link rel="shortcut icon" href="/favicon.ico">
 
-{{ if .RSSLink }}
-  <link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{- .Site.Title -}}" />
-  <link href="{{ .RSSLink }}" rel="feed" type="application/rss+xml" title="{{- .Site.Title -}}" />
-{{ end }}
+<!-- RSS -->
+<link href="{{ $.LanguagePrefix }}{{ "/posts/index.xml" | relURL }}" rel="alternate" type="application/rss+xml" title="{{- .Site.Title -}}" />
+<link href="{{ $.LanguagePrefix }}{{ "/posts/index.xml" | relURL }}" rel="feed" type="application/rss+xml" title="{{- .Site.Title -}}" />
 
 {{ template "_internal/opengraph.html" . }}
 {{ template "_internal/google_news.html" . }}
