Allow to set/disable licence icon in footer

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,5 +1,7 @@
 <footer>
-  <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">
-    <img alt="Creative Commons License" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png">
-  </a>
+  {{ if $.Site.Params.creativeCommonsLicence }}
+    <a rel="license" href="http://creativecommons.org/licenses/{{ $.Site.Params.creativeCommonsLicence }}/">
+      <img alt="Creative Commons License" src="https://i.creativecommons.org/l/{{ $.Site.Params.creativeCommonsLicence }}/80x15.png">
+    </a>
+  {{ end }}
 </footer>
