Remove https from URL

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -5,7 +5,7 @@
 {{ .Hugo.Generator }}
 
 <!-- CSS -->
-<link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
+<link href="//fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
 <link rel="stylesheet" href='{{ print "/assets/css/" $.Site.Data.assets.main.css | relURL }}'>
 
 <!-- Icons -->
